--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "cypress-axe",
-  "version": "0.8.1",
+  "name": "@justinribeiro/cypress-axe",
+  "version": "4.0.0",
   "files": [
     "dist"
   ],
@@ -22,6 +22,11 @@
   "author": "Andy Van Slaars",
   "contributors": [
     {
+      "name": "Justin Ribeiro",
+      "email": "justin@justinribeiro.com",
+      "url": "https://justinribeiro.com"
+    },
+    {
       "name": "Samuel Anthony Custer",
       "email": "samuel.a.custer@gmail.com",
       "url": "https://samcus.co"
@@ -29,16 +34,16 @@
   ],
   "license": "MIT",
   "devDependencies": {
-    "axe-core": "^3.4.1",
+    "axe-core": "^4.0.2",
     "parcel-bundler": "^1.12.4"
   },
   "dependencies": {},
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/avanslaars/cypress-axe.git"
+    "url": "git+https://github.com/justinribeiro/cypress-axe.git"
   },
   "bugs": {
-    "url": "https://github.com/avanslaars/cypress-axe/issues"
+    "url": "https://github.com/justinribeiro/cypress-axe/issues"
   },
-  "homepage": "https://github.com/avanslaars/cypress-axe#readme"
+  "homepage": "https://github.com/justinribeiro/cypress-axe#readme"
 }
